--- a/love_calulator/readme
+++ b/love_calulator/readme
@@ -1,2 +1,5 @@
 For algorithm:-
 https://www.codebrainer.com/blog/love-calculator-android
+
+visit the hosted webapp:-
+https://app.netlify.com/sites/romantic-aryabhata-1cd62e/overview
